; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_UINT64ToAsn1Time.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_UINT64ToAsn1Time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UINT64ToAsn1Time(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @UINT64ToSystem(i32* %6, i32 %11)
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @SystemToAsn1Time(i8* %13, i32* %6)
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @UINT64ToSystem(i32*, i32) #1

declare dso_local i32 @SystemToAsn1Time(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
